2012-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdf/pdfgen.w: Cast xfseeko() arg2 to avoid MSVC warning.

2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/texfileio.w (runpopen): Sync with ../lib/texmfmp.c.

2012-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c (shell_cmd_is_allowed): Change Arg1 from 'const char **'
	into 'const char *'; sync with ../lib/texmfmp.c.
	* luatex.h, lua/liolib.c, lua/loslibext.c, tex/texfileio.w: Adapt.

	* lua/liolib.c, luascripts/txt2zlib.w: Use binary file io mode.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2012-05-22  Taco Hoekwater  <taco@luatex.org>

	* lua/lkpselib.c: new function kpse.default_texmfcnf() that
	reports the value of DEFAULT_TEXMFCNF, for the benefit of
	context mkiv on Debian.

2012-05-22  Taco Hoekwater  <taco@luatex.org>

	* luafontloader/fontforge/fontforge/splinesave.c,
	luafontloader/fontforge/fontforge/splinefont.h: drop parts of the
	Type1 saving routines (unused) to remove a compiler warning.

	* pdf/pdftypes.h, lua/limglib.c, image/epdf.h, image/writeimg.w,
	image/writejbig2.w, ptexlib.h: more off_t trouble.

2012-05-21  Taco Hoekwater  <taco@luatex.org>

	* tex/printing.w, lua/ltokenlib.c, lua/llanglib.c, lua/llualib.c,
	lua/lnodelib.c, lua/luainit.w, lua/ltexiolib.c,
	lua/lcallbacklib.c, lua/lstatslib.c, lua/ltexlib.c,
	lua/loslibext.c, lua/lkpselib.c, lua/luatoken.w, lua/llfslibext.c,
	lua/lfontlib.c, lua/luanode.w, lua/lpdflib.c, lua/luastuff.w:
	when loading both "ptexlib.h" and "lua/luatex-api.h", make sure
	that "ptexlib.h" is loaded first because that reads config.h
	which affects loading of system headers (via Large File Support,
	specifically).

2012-05-20  Khaled Hosny  <khaledhosny@eglug.org>

	* tex/mlist.w: fix "warning: 'ext' might be used uninitialized".

2012-05-18  Taco Hoekwater  <taco@luatex.org>

	* lua/ltexlib.c: fix a ConTeXt crash on `\endinput \end`.

2012-05-18  Khaled Hosny  <khaledhosny@eglug.org>
